tests/positive/Pragmas.juvix
{-# unknownPragma: 300 #-}
module Pragmas;

import Stdlib.Prelude open;

{-# unknownPragma: 0 #-}
axiom a : Nat;

{-#
  unknownPragma: something
  unroll: 100
  inline: false
#-}
f : Nat → Nat
  | x := x;

{-# inline: true #-}
g : Nat → Nat
  | x := suc x;

{-
Multiline highlighting
-}
--- Judoc comment 1
--- Judoc comment 2
{-# unroll: 0 #-}
terminating
h : Nat → Nat
  | x := x + 5;

--- Judoc comment
{-# inline: false, unroll: 10, unknownPragma: tratatata #-}
main : Nat := 0;
