tests/negative/PragmasYAML.juvix
module PragmasYAML;

import Stdlib.Prelude open;

{-# {inline: true, unroll: 500} #-}
main : Nat := 0;
